# rust-study

./: .gitignore  Cargo.toml  README.md  __todo__.md  _todo.md  rustfmt.toml
#Async/: README.md
#CLI-args/: clap.md
#Collections/: compare_vec.rs  create_vec.rs  take_while.rs
#DateTime/: localtime-to-other.rs
#Documents/: generate_doc.md  inline_doc.md
#Enum/: enum_match.rs  enum_variants.rs  enum_variants_match.rs
#Error-handling/: 00-rust-error-handling.md  01-panic!.md  02-Option-Result.md  02-result-option-expect-unwarp.md  03-custom-err.md  ?.md  Error Handling In Rust - A Deep Dive.md  Error-Handling Summary.md  README.md  kind.rs  result-sample.rs  result.md
#File/: README.md  compress.rs  find_text.rs  fs.rs  read-file-line-by-line.rs  read.md  read_cvs.rs  wrtite.md
#Format/: print.md
#Function/: Closure.md  pass and return.md
#Function and Colsure/: Closure.md
#Generic/: README.md
#Lifetime/: README.md  fn_lifetime.rs  lifetime-annotation.md  lifetime-annotations.md  static-lifetime.rs  str_literal.md
#Macro/: reference.md
#Ownership-Borrow/: README.md  borrowing-code-patterns.md  referece.md  vec_move_semantic.rs
#Ownership-Borrow-Lifetime/: Borrowing-and-Mutability.md  lifetime.md
#Ownership-borrow/: borrow-for-loop.md  ownership-rules.md
#Pointer/: 01-Box.md  02-Rc.md  borrowed_pointers.md  rc.md
#Project-management/: README.md  lib-bin.md  project-managment.md
#Rand/: rand_num.rs
#Regex/: README.md  regex_replace.rs
#Slice/: slice.md  string-slice.md
#SmartPointer/: 03-RefCell.md  rc_solar.rs  smart_pointers.md  unique_pointers.md
#String/: README.md  String-&str.md  String-vs-&str.md  Understanding String and &str in Rust-2024.md  change-char.md
#Struct/: generic-rect.rs  tuple-struct.md
#System/: system.md
#Test/: Mock.md  README.md  _reference.md  cargo.md  good-practice.md  intergration-test.md  macro.md  sample.rs
#Tokio/: rust-async.md  thread-async.md
#Traits/: display-task.rs
00-Rust-Toolchain/: install.md
00-Setup/: Ultimate VS Code setup for Rust development (2025).md  vscode-format-code.md
00-Setup-Tools/: cargo.md  vs-code-extentions.md  vscode-tasks.json
00-Setup-and-Tools/: cargo.md  install.md  vs-code-debug-ut.md  vs-code-debug.md  watch-run.md
00-setup/: README.md
00-vscode-setup/: vs-code-extentions.md
01-Syntax/: const-vs-immut.md  const.md
01-cargo-packages/: cargo.md  reference.md
01-string/: Where is the string literal stored.md  string-literal.md  strings-in-rust.md
01_DataType_Syntax/: DataType and Size.md  const-vs-immut.md
02-Rust-Data-Conversion/: README.md
02-compound-types/: README.md
02_Ownership-Lifetime/: 00-ownership.md  lifetime-annotation.md
03-BestPractice-Documents/: generate_doc.md
03-BestPractice-Error-handling/: Error Handling In Rust - A Deep Dive.md  error-handling.md
03-BestPractice-Error-handling/transaction/: Cargo.toml
03-BestPractice-Error-handling/transaction/src/: lib.rs
03-BestPractice-Project-structure/: Best way to orgnize structure-modules.md  Rust-Modules and Project Structure.md  _module-system-elements.md
03-String/: encode.rs  longer-string.rs
03-compound-types/: README.md  enum_data.rs
04-Debug/: README.md  stack_and_heap.rs  vscode-launch.json
05-Test/: Mock.md  README.md  async-test.md  cargo-watch.md  intergration-test.md  macro.md  run-test.md  test-current-crate.md  unit-test-boilerplate.md  unit-test.md
05-error-handling/: 00-Panic.md  01-Option-Result.md  02-unwarp-expect.md
06-ownership-borrow/: 00-ownership.md  01-scope.md  02-clone-borrow.md  README.md
07-expression-statement/: README.md
07-string-&str/: README.md
08-collections/: sort.rs
09-traits/: trait_basic.rs
Axum/: README.md
Axum/axum-demo/: Cargo.toml  README.md
Axum/axum-demo/src/: axum_basic.rs  error.rs  extract_demo.rs  hello_axum.rs  hello_axum_2.rs
Axum/axum-demo/tests/: quick_dev.rs
Axum/axum-sqlite-api/: .env  Cargo.toml  README.md  data.db  data.db-shm  data.db-wal
Axum/axum-sqlite-api/migrations/: 001_create_users.sql
Axum/axum-sqlite-api/src/: main.rs
Axum/axum-sqlite-api/tests/: get.http  post.http
Axum/axum-swagger/: Cargo.toml  README.md
Axum/rs-counter-study/: Cargo.toml  README.md  data.db
Axum/rs-counter-study/migrations/: 20250209221140_create_users.down.sql  20250209221140_create_users.up.sql  20250210025348_create_counters.down.sql  20250210025348_create_counters.up.sql
Axum/rs-counter-study/src/: api.rs  db.rs  main.rs
Axum/rs-counter-study/src/api/: counter.rs  jwt.rs  user.rs
Bevy/: README.md  Specs.md
Concurrency/: lock_naive.rs
Datastructure-algorithm/: Cargo.toml  READEME.md
Error-handling/: 00-panic!.md  Error-Handling Summary.md  error-handling.md  if_let.rs  question_mark.md
FFI/: README.md
Formatted-Print/: README.md
KeyFeatures-Async/: An introduction to async Rust.md  Life of an async fn.md  What is async runtime.md  async-await.md  async-multitrhead.md
KeyFeatures-Colsure/: FnOnce_FnMut_Fn.md  move.md  (+3 more)
KeyFeatures-SmartPointer/smart-pointer-demo/: Cargo.toml
KeyFeatures-SmartPointer/smart-pointer-demo/src/: arc_multi_thread_counter.rs  arc_mutex_demo.rs  box_list.rs  my_box.rs  rc_demo.rs
Projects/MongoDB-Tokio/: Cargo.toml
Projects/rust-clap-cli/: Cargo.toml  README.md
Projects/rust-clap-cli/src/: main.rs
Projects/rust-clap-cli/src/cmd/: conf.rs
Statistics with Rust/my_statistics_project/: Cargo.toml
Statistics with Rust/my_statistics_project/src/: main.rs
_Rust_Practice/web2image/: Cargo.toml  README.md
_courses/Rust as a Service/http_server/: Cargo.toml
_courses/Rust as a Service/http_server/src/: header_extract.rs  path_extract.rs  query_extract.rs  state.rs
xdiff-live-coding/xdiff/: Cargo.toml
xdiff-live-coding/xdiff/examples/: config.rs  tty.rs
xdiff-live-coding/xdiff/fixtures/: diff1.txt  xreq_test.yml
xdiff-live-coding/xdiff/src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
xdiff-live-coding/xdiff/src/config/: mod.rs  xdiff.rs  xreq.rs
xdiff-live-coding/xdiff/tests/: xdiff_run_failed.md  xdiff_run_succeed.md
(+1046 files in other folders)
