[workspace]
members = [
  "_Libraries/serde/serde_demo",
  "#File/file_demo",
  "#Unsafe/unsafe-demo",
  "#Regex/regex_demo",
  "Projects/minesweeper",
  "05-Test/testlib",
  "Projects/minesweeper_exercism",
  "Projects/minesweeper_gui",
  "System/dotenv_demo",
  "Projects/kilo-ed",
  "_Courses/Hands-On Data Structures and Algorithms in Rust-2020/02-Sorting/v1-sorting",
  "_Courses/Hands-On Data Structures and Algorithms in Rust-2020/03-LinkdedList/v1-ll",
  # "Tauri/tauri-zoom-launcher/src-tauri",
  "Tauri/time-tracker/src-tauri", "Projects/rust-vm", "Projects/pwd_cracker", "Statistics with Rust/my_statistics_project", "Projects/rust-lib-design/rat-rs", 
  "Rust-DB-SurrealDB/rust-surrealdb-basic", "Axum/rs-counter-study", "Rust-Debug/Debugging Rust 2021 Applications/debugging-rust",
  "Projects/monkey-interpreter",
  "Datastructure-algorithm", "Projects/timers/timers",
  "KeyFeatures-SmartPointer/linkedList_demo",
  "rust-problem-solving", 
  "Projects/Rust-Next.js-FileShare/secureshare_backend", 
  "Axum/axum-sqlite-api", "Axum/axum-demo", "KeyFeatures-Async/tokio-demo", 
  "Rust-DB-SQLite/sqlite-sqlx-demo",
  "Rust-DB-Postgres/axum_postgres_api"
, "KeyFeatures-Async/async-demo", "KeyFeatures-Async/chat_tokio_stream", "_Books/Async Rust/demo"]
exclude = [
  "Tauri",
  "Projects/ToDoList/todo-rust",
  "Projects/not-so-sql", 
  "Projects",
  "Bevy",
  "03-BestPractice-Project-structure",
  "Rust-DB-Firebase/rust-firebase-basic","Rust-Async"
]

resolver = "2"
