[package]
name = "transaction"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transaction_lib"
path = "src/lib.rs"


[[bin]]
name = "trans"
path = "src/main.rs"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"