[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.8.1"
# -- Others
lazy-regex = "3"
strum_macros = "0.27.1"
uuid = {version = "1", features = ["v4","fast-rng",]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"


[[bin]]
name = "axum_basic"
path = "src/axum_basic.rs"


[[bin]]
name = "hello_axum"
path = "src/hello_axum.rs"

[[bin]]
name = "hello_axum_2"
path = "src/hello_axum_2.rs"
