[package]
name = "axum-sqlite-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
sqlx = {version="0.8.3", features=["runtime-tokio","tls-rustls", "sqlite","time"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }