[package]
name = "rs-counter-study"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.8.1"
tokio={version="1.0", features=["full"]}
tracing="0.1"
tracing-subscriber ={version="0.3", features=["env-filter"]} 
serde_json="1.0"
serde="1.0"
tower-http ={version="0.6.2", features=["trace", "request-id", "util"]}
tower="0.5.2"
sqlx = {version="0.8.3", features=["runtime-tokio","tls-rustls", "sqlite","time"]} 
dotenv ="0.15"
time={version="0.3.31", features=["serde-human-readable"]}
anyhow="1.0"
jsonwebtoken = "9.3"
