[package]
name = "my_box"
version = "0.1.0"
authors = ["benjaminhuanghuang <benjaminhuanghuang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "my_box"
path = "src/main.rs"

[[bin]]
name = "arc_multi_thread_counter"
path = "src/arc_multi_thread_counter.rs"

[[bin]]
name = "box_list"
path = "src/box_list.rs"
