[package]
name = "mongodb-rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.3.7"
serde = {version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "3.2.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'