[package]
name = "rust-clap-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
# error-handling 
anyhow = "1.0"
log = "0.4.21"
# configure logging levels via environment variables
env_logger = "0.11.3"
# for configuration management
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Microsoft SQL Server (MSSQL) client for Rust
tiberius = "0.12.2"


# async-std crate provides an asynchronous runtime and standard library
[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]