[package]
name = "my_statistics_project"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
statrs = "0.17.1"
plotly = "0.10.0"

csv = "1.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio =  {version="1", features=["full"]}