[package]
name = "web2image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
qrcode = "0.12"
image = "0.24.5"
clap = "4.0.22"
url = "2"