[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.8.1"



[[bin]]
name = "path_extract"
path = "src/path_extract.rs"

[[bin]]
name = "query_extract"
path = "src/query_extract.rs"

[[bin]]
name = "header_extract"
path = "src/header_extract.rs"